--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<div id="title">H6nry's Cydia repo</div>
+<div id="title">repo? igusse?</div>
 <div id="content">
-This is my Cydia repo.<br>
-Feel free to add it to your list! Maybe some awesome stuff waits for you here ;)<br><br>
+is this thing working hello? 
 <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://h6nry.github.io/repo/"><b>Open Cydia for me!</b></a><span id="ocy"></span><br><br>
 <hr>
 <h4>These are the packages on this repo</h4>
