--- a/test deb/index.html
+++ b/test deb/index.html
@@ -1,5 +1,5 @@
 <div id="content" style="display:none">
-Requires iOS 15 (definitely!)<br><br>
-test deb :)<br><br>
+<br>Requires iOS 15 (definitely!)<br><br>
+test deb :)</br>
 .<br><br>
 </div>
